--- a/EX_2/index.html
+++ b/EX_2/index.html
@@ -8,6 +8,23 @@
     <title>Exercicio 1</title>
 </head>
 <body>
+    <section class="formulario">
+        <form id="forn" action="" >
+            <section class="horas-trabalhadas">
+                <label for="Horas-trabalhadas">Horas trabalhadas</label>
+                <input type="number" id="Horas-trabalhadas">
+            </section>
+
+            <section class="Salário-por-hora ">
+                <label for="Salário-por-hora">Salário por hora</label>
+                <input type="number" id="Salário-por-hora">
+            </section>
+         <input onclick="salario()" type="button" value="enviar">  
+        </form>
+    </section>
+    <article class="ab">
+        <p id="a"></p>
+    </article>
     
 
 
