--- a/EX_3/index.html
+++ b/EX_3/index.html
@@ -1,16 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
-    <title>Exercicio 1</title>
+    <title>Exercicio 3</title>
 </head>
+
 <body>
-    
+    <section class="main">
+        <h1>        CONTADOR</h1>
+        <section class="e">
+            <form action="">
+                <section>
+                    <label for="conta">Número da conta</label>
+                    <input type="number" name="" id="conta">
+                </section>
+                <section>
+                    <label for="saldo">Saldo</label>
+                    <input type="number" name="" id="saldo">
+                </section>
+                <section>
+                    <label for="debito">Débito</label>
+                    <input type="number" name="" id="debito">
+                </section>
+                <section>
+                    <label for="credito">Crédito</label>
+                    <input type="number" name="" id="credito">
+                </section>
+            </form>
+             <section class="btn1">
+                <input onclick="contador()" id="btn" type="button" value="Enviar">
+                </section>
+        </section>
+        <section class="d">
+            <article>
+                <h1 id="text"></h1>
+            </article>
+        </section>
+
+
+    </section>
 
 
     <script src="index.js"></script>
 </body>
+
 </html>
