--- a/EX_5/index.html
+++ b/EX_5/index.html
@@ -8,7 +8,36 @@
     <title>Exercicio 1</title>
 </head>
 <body>
+    <section class="main">
+        <h1>  MERCADINHO    </h1>
+        <section class="e">
+            <form action="">
+                <section>
+                    <label for="nome">NOME DO PRODUTO</label>
+                    <input type="text" name="" id="nome">
+                </section>
+                <section>
+                    <label for="quantidade">QUANTIDADE</label>
+                    <input type="number" name="" id="quantidade">
+                </section>
+                <section>
+                    <label for="preco">PREÇO</label>
+                    <input type="number" name="" id="preco">
+                </section>
+            </form>
+             <section class="btn1">
+                <input onclick="contador()" id="btn" type="button" value="Vender">
+                </section>
+        </section>
+        <section class="d">
+            <article>
+                <h1 id="text"></h1>
+                <h1 id="text2"></h1>
+            </article>
+        </section>
     
+    
+    </section>
 
 
     <script src="index.js"></script>
